fix/delay the bleeding of form into footer when zooming in on desktop screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,6 @@ nav {
 
 /* main */
 main {
-    /* background-color: #4ecdc4; */
     /* Make main element take up surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
@@ -229,6 +228,9 @@ footer {
     color: rgb(255, 250, 230);
     background-color: rgba(60, 60, 60, 0.6);
     padding: 30px;
+    /* testing */
+    /* display: flex;
+    flex-direction: column; */
 }
 
 #signup-form>h2 {
@@ -330,16 +332,20 @@ footer {
         column-gap: 0;
     }
 
+    /* form */
     #signup {
-        background-position :center;
+        background-position: center;
         position: relative;
     }
 
     #signup-form {
-        position:absolute;
-        left:10%;
-        top:150px;
         max-width: 400px;
+        position: absolute;
+        left: 10%;
+        /* original */
+        /* top: 150px; */
+        /* this was necessary to stop form bleeding into the footer when zooming in on desktop screen sizes*/
+        top: 25%;
     }
 
     .text-input:hover {
@@ -347,7 +353,7 @@ footer {
     }
 
     .join-button:hover {
-        background-color: rgb(60, 65, 41);
+        background-color: rgb(255, 250, 230);
         color: #454b1b;
     }
 }
